--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,32 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import { getCollection } from 'astro:content';
+const posts = await getCollection('blog');
+
+const postsByYear: Record<number, typeof posts> = {};
+posts.forEach((post) => {
+  const year = post.data.pubDate.getFullYear();
+  if (!postsByYear[year]) {
+    postsByYear[year] = [];
+  }
+  postsByYear[year].push(post);
+})
+
 ---
 
 <Layout>
-	<Welcome />
+	<h1>Blog</h1>
+	{Object.keys(postsByYear).sort((a, b) => Number(b) - Number(a)).map((year) => (
+    <h2>{year}</h2>
+    <>
+    {postsByYear[Number(year)].sort((a, b) => b.data.pubDate.getTime() - a.data.pubDate.getTime()).map((post) => (
+      <li><a href={`/blog/${post.id}`}>{post.data.title}</a></li>
+    ))}
+    </>
+  ))}
 </Layout>
+
+<style>
+
+</style>
