--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,8 @@
+---
+import '../styles/global.css'; 
+import '@fontsource-variable/inter/opsz.css';
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -8,15 +13,18 @@
 		<title>Astro Basics</title>
 	</head>
 	<body>
-		<slot />
+		<div class="mx-auto max-w-screen-md px-5">
+			<slot />
+		</div>
 	</body>
 </html>
 
 <style>
 	html,
 	body {
-		margin: 0;
+		margin: 6px;
 		width: 100%;
 		height: 100%;
+		font-family: 'Inter Variable', sans-serif;
 	}
 </style>
