--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 
 import { getCollection } from 'astro:content';
+import { TypographyH1, TypographyH3, TypographyLarge, TypographySmall, TypographyMuted } from '@/components/typography/typography';
 const posts = await getCollection('blog');
 
 const postsByYear: Record<number, typeof posts> = {};
@@ -16,17 +17,16 @@ posts.forEach((post) => {
 ---
 
 <Layout>
-	<h1>Blog</h1>
+	<TypographyH3>Blog</TypographyH3>
 	{Object.keys(postsByYear).sort((a, b) => Number(b) - Number(a)).map((year) => (
-    <h2>{year}</h2>
-    <>
+    <TypographyLarge className="mt-8">{year}</TypographyLarge>
+    <div class="flex flex-col gap-4 mt-4">
     {postsByYear[Number(year)].sort((a, b) => b.data.pubDate.getTime() - a.data.pubDate.getTime()).map((post) => (
-      <li><a href={`/blog/${post.id}`}>{post.data.title}</a></li>
+      <a href={`/blog/${post.id}`} class="mt-2 hover:opacity-80">
+          <TypographySmall>{post.data.title}</TypographySmall>
+          <TypographyMuted>{post.data.description}</TypographyMuted>
+      </a>
     ))}
-    </>
+    </div>
   ))}
 </Layout>
-
-<style>
-
-</style>
