--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -1,22 +1,34 @@
 ---
-import { TypographyA, TypographyBlockquote, TypographyCode, TypographyH1, TypographyH2, TypographyH3, TypographyH4, TypographyList, TypographyP } from '@/components/typography/typography';
-import { getCollection, render } from 'astro:content';
+import { TypographyA, TypographyBlockquote, TypographyCode, TypographyH1, TypographyH2, TypographyH3, TypographyH4, TypographyList, TypographyMuted, TypographyP, TypographySmall } from '@/components/typography/typography';
+import { getCollection, getEntry, render, type CollectionEntry } from 'astro:content';
 import Layout from '../../layouts/Layout.astro';
+import { dateToDisplayString } from '@/lib/utils';
+
+interface BlogItem {
+  post: CollectionEntry<"blog">;
+  author: CollectionEntry<"authors">[];
+}
 
 export async function getStaticPaths() {
   const posts = await getCollection('blog');
   return posts.map(post => ({
     params: { id: post.id },
-    props: { post },
+    props: { post, author: post.data.author.id },
   }));
 }
 
-const { post } = Astro.props;
+
+const { post, author } = Astro.props;
+// const author = await getEntry(post.data.author);
 const { Content } = await render(post);
 ---
-<p>Published on: {post.data.pubDate.toDateString()}</p>
-<p>By: {JSON.stringify(post.data.author)}</p>
 <Layout>
+  <TypographyH1>{post.data.title}</TypographyH1>
+  <div class="flex justify-start gap-2 items-center">
+    <TypographyMuted>{dateToDisplayString(post.data.pubDate)}</TypographyMuted>
+    <TypographyMuted>{' - '}</TypographyMuted>
+    <TypographySmall>{author}</TypographySmall>
+    </div>
   <Content  components={{
     h1: TypographyH1,
     h2: TypographyH2,
