--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,7 +41,7 @@
 }
 
 @theme inline {
-  --font-sans: "Inter Variable", "sans-serif";
+  --font-sans: var(--font-inter);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
