add rss and header

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,32 +1,4 @@
 ---
-import Layout from '../layouts/Layout.astro';
-
-import { getCollection } from 'astro:content';
-import { TypographyH1, TypographyH3, TypographyLarge, TypographySmall, TypographyMuted } from '@/components/typography/typography';
-const posts = await getCollection('blog');
-
-const postsByYear: Record<number, typeof posts> = {};
-posts.forEach((post) => {
-  const year = post.data.pubDate.getFullYear();
-  if (!postsByYear[year]) {
-    postsByYear[year] = [];
-  }
-  postsByYear[year].push(post);
-})
+return Astro.redirect('/blog', 301); 
 
 ---
-
-<Layout>
-	<TypographyH3>Blog</TypographyH3>
-	{Object.keys(postsByYear).sort((a, b) => Number(b) - Number(a)).map((year) => (
-    <TypographyLarge className="mt-8">{year}</TypographyLarge>
-    <div class="flex flex-col gap-4 mt-4">
-    {postsByYear[Number(year)].sort((a, b) => b.data.pubDate.getTime() - a.data.pubDate.getTime()).map((post) => (
-      <a href={`/blog/${post.id}`} class="mt-2 hover:opacity-80">
-          <TypographySmall>{post.data.title}</TypographySmall>
-          <TypographyMuted>{post.data.description}</TypographyMuted>
-      </a>
-    ))}
-    </div>
-  ))}
-</Layout>
