--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,20 +1,49 @@
 ---
 import { Font } from 'astro:assets';
 import '../styles/global.css';
+import Header from '../components/Header';
+import { ModeToggle } from '@/components/ModeToggle';
+
 ---
 
+<script is:inline>
+	const getThemePreference = () => {
+		if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
+			return localStorage.getItem('theme');
+		}
+		return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+	};
+	const isDark = getThemePreference() === 'dark';
+	document.documentElement.classList[isDark ? 'add' : 'remove']('dark');
+ 
+	if (typeof localStorage !== 'undefined') {
+		const observer = new MutationObserver(() => {
+			const isDark = document.documentElement.classList.contains('dark');
+			localStorage.setItem('theme', isDark ? 'dark' : 'light');
+		});
+		observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] });
+	}
+</script>
+
 <!doctype html>
-<html lang="en">
+<html lang="en" >
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/ico+xml" href="/favicon.ico" />
+		<link
+			rel="alternate"
+			type="application/rss+xml"
+			title="Complexity Downward"
+			href={new URL("rss.xml", Astro.site)}
+		/>
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 		<Font cssVariable="--font-inter" preload />
 	</head>
 	<body class="bg-main text-main min-h-screen font-sans w-full">
 		<div class="grow mx-auto py-10 px-6 max-w-3xl space-y-4">
+			<Header pathname={Astro.url.pathname} client:load />
 			<slot />
 		</div>
 	</body>
