--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,7 +37,7 @@ import Footer from '@/components/Footer';
 			href={new URL("rss.xml", Astro.site)}
 		/>
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Complexity Downward</title>
 		<Font cssVariable="--font-inter" preload />
 	</head>
 	<body class="bg-main text-main min-h-screen font-sans w-full">
